# rustrest

./: Cargo.toml  README.md  TODO.md
src/: app.rs  collection.rs  env.rs  http_client.rs  main copy.rs  main.rs  message.rs  tab.rs  utils.rs
src/collection/: collection.rs  env.rs  mod.rs
src/tab/: components.rs  messages.rs  mod.rs  state.rs  tab.rs  types.rs
src/tab/views/: request.rs  response.rs
src/ui/: collection_viewer.rs  env_viewer.rs  mod.rs  sidebar.rs  workspace.rs
src/ui/menu/: menu.rs  menu_message.rs  mod.rs
src/ui/toast/: toast.rs
