[package]
name = "rustrest"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
urlencoding = "2.1.3"
