[package]
name = "rustrest"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/SojebSikder/rustrest"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls", "blocking"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
urlencoding = "2.1.3"
url = "2.5.8"
rfd = "0.17.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
